--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
 
     defaultConfig {
         applicationId "com.bongamnguni.weather"
-        minSdkVersion 28
-        targetSdkVersion 31
+        minSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -43,5 +43,39 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    //multidex
+    implementation 'androidx.multidex:multidex:2.0.1'
+    //google service location
+    implementation "com.google.android.gms:play-services-location:${rootProject.location}"
+    implementation "com.google.android.libraries.places:places:${rootProject.google_places}"
+
+    //Room
+    //def room_version ="2.2.5"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:${rootProject.life_cycle_version}"
+    implementation "androidx.lifecycle:lifecycle-extensions:${rootProject.life_cycle_version}"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02"
+
+    //glide
+    implementation "com.github.bumptech.glide:glide:${rootProject.glide_version}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.glide_version}"
+    kapt "com.github.bumptech.glide:compiler:${rootProject.glide_version}"
+
+
+    implementation "com.squareup.retrofit2:retrofit:${rootProject.retrofit_version}"
+    implementation "com.squareup.retrofit2:converter-gson:${rootProject.retrofit_version}"
+
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${rootProject.coroutine_version}"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:${rootProject.coroutine_android_version}"
+
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 }
