--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.4.21"
+    ext.room_version = "2.2.5"
     repositories {
         google()
         jcenter()
@@ -19,6 +20,20 @@ allprojects {
         google()
         jcenter()
     }
+}
+
+ext {
+    life_cycle_version ="2.2.0"
+    glide_version = "4.8.0"
+    retrofit_version ="2.8.0"
+    coroutine_version = "1.3.9"
+    coroutine_android_version = "1.3.5"
+    //picaso_version = "2.71828"
+    location = "17.0.0"
+    google_places = "2.2.0"
+    volley_version = "1.1.0"
+    gson_version = "2.8.6"
+
 }
 
 task clean(type: Delete) {
