--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MapsActivity"/>
+        <activity android:name=".ui.MapsActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".ui.AddCityActivity"/>
